# average-face

./: .gitignore  README.md  pyproject.toml
scripts/: sample.py
src/average_face/: __init__.py  average_face.py  facial_landmarks.py  io.py  plotly.py  typing.py
src/average_face/affine_transformation/: __init__.py  align_eyes.py  warp_triangles.py
